ARM: dts: msm: Add spss glink ssr entry for Lahaina
Add glink ssr entry for SPSS to receive notification of
modem ssr.

Change-Id: I75fee736ed2bd2f3b37ba075221de0acc1c604d0

--- a/qcom/lahaina.dtsi
+++ b/qcom/lahaina.dtsi
@@ -2573,7 +2573,8 @@
 			qcom,modem_glink_ssr {
 				qcom,glink-channels = "glink_ssr";
 				qcom,notify-edges = <&glink_adsp>,
-						    <&glink_slpi>;
+						    <&glink_slpi>,
+						    <&glink_spss>;
 			};
 		};
 
@@ -2684,6 +2685,11 @@
 
 			label = "spss";
 			qcom,glink-label = "spss";
+
+			qcom,spss_glink_ssr {
+				qcom,glink-channels = "glink_ssr";
+				qcom,notify-edges = <&glink_modem>;
+			};
 		};
 	};
 
