--- a/display/lahaina-sde.dtsi
+++ b/display/lahaina-sde.dtsi
@@ -391,6 +391,7 @@
 
 		qcom,max-pclk-frequency-khz = <675000>;
 
+		qcom,widebus-enable;
 		qcom,max-dp-dsc-blks = <2>;
 		qcom,max-dp-dsc-input-width-pixs = <2048>;
 
