--- a/display/lahaina-sde.dtsi
+++ b/display/lahaina-sde.dtsi
@@ -392,6 +392,8 @@
 		qcom,max-pclk-frequency-khz = <675000>;
 
 		qcom,widebus-enable;
+		qcom,dsc-feature-enable;
+		qcom,fec-feature-enable;
 		qcom,max-dp-dsc-blks = <2>;
 		qcom,max-dp-dsc-input-width-pixs = <2048>;
 
