Revert "ARM: dts: msm: disable qrng node for Lahaina (debug)"
This reverts commit ba84dfb5886c8c6e8319078ef29c8ffdadf2954e.

Change-Id: I89c48c61b4f2df459978ddbdba14601ab174460d

--- a/qcom/lahaina.dtsi
+++ b/qcom/lahaina.dtsi
@@ -3455,6 +3455,16 @@
 		status = "ok";
 	};
 
+	qcom_rng: qrng@10d3000 {
+		compatible = "qcom,msm-rng";
+		reg = <0x10d3000 0x1000>;
+		qcom,no-qrng-config;
+		interconnect-names = "data_path";
+		interconnects = <&gem_noc MASTER_APPSS_PROC &config_noc SLAVE_HWKM>;
+		clock-names = "km_clk_src";
+		clocks = <&clock_rpmh RPMH_HWKM_CLK>;
+	};
+
 	qcom_cedev: qcedev@1de0000 {
 		compatible = "qcom,qcedev";
 		reg = <0x1de0000 0x20000>,
