--- a/qcom/lahaina-usb.dtsi
+++ b/qcom/lahaina-usb.dtsi
@@ -69,7 +69,7 @@
 			usb-core-id = <0>;
 			tx-fifo-resize;
 			maximum-speed = "super-speed-plus";
-			dr_mode = "otg";
+			dr_mode = "peripheral";
 		};
 
 		qcom,usbbam@a704000 {
@@ -384,7 +384,7 @@
 			usb-core-id = <1>;
 			tx-fifo-resize;
 			maximum-speed = "super-speed";
-			dr_mode = "otg";
+			dr_mode = "drd";
 		};
 	};
 
